ok it somehow works -- and the approach is great -- but the VM goes down. so it's too late now, but perhaps we just forget about the code cache right now, and run the interpreter straight away without the Capture instance, because I have the feeling the system breaks down because we load that Function0 class in a different context?